--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,10 +1,11 @@
 <h4>Product List</h4>
 
 <button (click)='getAllProducts()'>Get All Products</button>
-<ul>
-  <li *ngFor = 'let product of products'>
-    {{product.title}} | Brand: {{product.brand}} | Rating: {{product.rating}}
-  </li>
-</ul>
+<button (click)='addProduct()'>Add a Product</button>
+
+<div class='product' *ngFor = 'let product of products'>
+    {{product.title}}
+      {{product.brand}} | Rating: {{product.rating}}
+</div>
 
 
