Added delete product functionality.

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,8 +4,8 @@
 <button (click)='addProduct()'>Add a Product</button>
 
 <div class='product' *ngFor = 'let product of products'>
-    {{product.title}}
-      {{product.brand}} | Rating: {{product.rating}}
+    {{product.title}} | {{product.brand}} | Rating: {{product.rating}}
+    <button (click)='deleteProduct(product)'>Delete</button>
 </div>
 
 
