Product list and et. al.

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,6 +5,7 @@
 
 <div class='product' *ngFor = 'let product of products'>
     {{product.title}} | {{product.brand}} | Rating: {{product.rating}}
+    <button (click)='updateProduct(product)'>Update</button>
     <button (click)='deleteProduct(product)'>Delete</button>
 </div>
 
